--- a/SmartCam/SmartCam/Base.lproj/Main.storyboard
+++ b/SmartCam/SmartCam/Base.lproj/Main.storyboard
@@ -48,9 +48,12 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.6395483944" green="0.49433101779999999" blue="0.20454417620000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                <state key="normal" title="Sign Up!">
+                                <state key="normal" title="Your Trips">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="6TA-Mp-uvb" kind="show" id="pK4-cS-ALc"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.044906237230555562" green="0.072428385416666671" blue="0.13935451130833332" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -66,6 +69,73 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hTu-Li-5da" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1052" y="-57.121439280359823"/>
+        </scene>
+        <!--Trips View Controller-->
+        <scene sceneID="0dQ-Tk-wn6">
+            <objects>
+                <viewController id="6TA-Mp-uvb" customClass="TripsViewController" customModule="SmartCam" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Uad-dE-cbZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="XDn-nt-vXe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BHV-OO-7tF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trips" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nyq-Ri-hxu">
+                                <rect key="frame" x="0.0" y="20" width="375" height="60"/>
+                                <color key="backgroundColor" red="0.6395483944" green="0.49433101779999999" blue="0.20454417620000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="vht-wh-Mkv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YdX-zy-PWf">
+                                <rect key="frame" x="0.0" y="80" width="375" height="538"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="65" id="KvK-vY-nDt">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KvK-vY-nDt" id="6Mb-NF-O6j">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="64.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trip Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kku-Lk-k0S">
+                                                    <rect key="frame" x="8" y="10" width="359" height="44.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Kku-Lk-k0S" firstAttribute="top" secondItem="6Mb-NF-O6j" secondAttribute="top" constant="10" id="DE6-1Z-YeI"/>
+                                                <constraint firstItem="Kku-Lk-k0S" firstAttribute="leading" secondItem="6Mb-NF-O6j" secondAttribute="leading" constant="8" id="FVo-J0-nLX"/>
+                                                <constraint firstAttribute="trailing" secondItem="Kku-Lk-k0S" secondAttribute="trailing" constant="8" id="mrR-rz-ezK"/>
+                                                <constraint firstAttribute="bottom" secondItem="Kku-Lk-k0S" secondAttribute="bottom" constant="10" id="vBm-7T-6w2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="YdX-zy-PWf" firstAttribute="top" secondItem="nyq-Ri-hxu" secondAttribute="bottom" id="7Un-Gf-3t9"/>
+                            <constraint firstItem="YdX-zy-PWf" firstAttribute="leading" secondItem="BHV-OO-7tF" secondAttribute="leading" id="9Cq-iE-uRq"/>
+                            <constraint firstItem="nyq-Ri-hxu" firstAttribute="top" secondItem="Uad-dE-cbZ" secondAttribute="bottom" id="JLR-fe-SGu"/>
+                            <constraint firstAttribute="trailing" secondItem="nyq-Ri-hxu" secondAttribute="trailing" id="LoM-R5-MOL"/>
+                            <constraint firstItem="nyq-Ri-hxu" firstAttribute="leading" secondItem="BHV-OO-7tF" secondAttribute="leading" id="OEX-d2-XF5"/>
+                            <constraint firstItem="XDn-nt-vXe" firstAttribute="top" secondItem="YdX-zy-PWf" secondAttribute="bottom" id="SST-Pb-hQe"/>
+                            <constraint firstAttribute="trailing" secondItem="YdX-zy-PWf" secondAttribute="trailing" id="eK1-nq-g0N"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="17g-Bg-aht" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1856.8" y="-38.23088455772114"/>
         </scene>
         <!--Video View Controller-->
         <scene sceneID="iBe-Q1-oyk">
@@ -144,12 +214,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DBs-iO-ecP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1948" y="-57.121439280359823"/>
+            <point key="canvasLocation" x="1858" y="-741"/>
         </scene>
         <!--Events View Controller-->
         <scene sceneID="XdF-VC-YiH">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MTG-ak-T95" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="yf6-JB-uYs" customClass="EventsViewController" customModule="SmartCam" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7iw-No-Srt"/>
@@ -223,6 +292,7 @@
                         <segue destination="8nQ-RH-o3g" kind="show" identifier="ToPlaybackVideo" id="4iS-7T-4Ja"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MTG-ak-T95" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1048.8" y="624.73763118440786"/>
         </scene>
@@ -260,7 +330,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zbN-FC-4Nw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1948" y="625"/>
+            <point key="canvasLocation" x="1860" y="625"/>
         </scene>
     </scenes>
     <resources>
